@@ -7,6 +7,8 @@
    - Documentation update
  . John Haxby <john.haxby@oracle.com>
    - IPv6 support forward ported from FreeBSD
+ . David Couture <glowplugrelayw0rks@gmail.com>
+   - Correct continuation line problems on 64bit architecture
 
 
 Version 1.5
